@@ -3,9 +3,10 @@ import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 import java.util.HashSet;
 
@@ -25,13 +26,24 @@ public class Main {
             String extension = link
                     .replaceAll("^.+\\.", "")
                     .replace("?.+$", "");
-
             String filePath = "data/" + number++ + "." + extension;
+            try {
+                download(link, filePath);
+            } catch (Exception e) {
+                System.out.println("Не могу загрузить " + link);
+            }
         }
-
     }
-    public static void download(String url) throws IOException {
-        URLConnection connection = new URL(url).openConnection();
+
+    public static void download(String url, String path) throws IOException {
+        URI uri = URI.create(url);
+        URLConnection connection = uri.toURL().openConnection();
         InputStream inputStream = connection.getInputStream();
+        try (FileOutputStream outputStream = new FileOutputStream(path)) {
+            int b;
+            while ((b = inputStream.read()) != -1) {
+                outputStream.write(b);
+            }
+        }
     }
 }
